--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Remove tracing parameters from b23.tv/*.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/renbaoshuo/b23-wtf-js/issues"
   },
-  "homepage": "https://github.com/renbaoshuo/b23-wtf-js#readme"
+  "homepage": "https://github.com/renbaoshuo/b23-wtf-js#readme",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "http": "^0.0.1-security"
+  }
 }
